@@ -15,7 +15,7 @@ configure: configure-stamp
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-	./configure --sbindir=/usr/sbin --sysconfdir=/etc --localstatedir=/var --mandir=%{_mandir}  CC="gcc" AFLAGS="--noexecstack" LDFLAGS="-z noexecstack"
+	./configure --sbindir=/usr/sbin --sysconfdir=/etc --localstatedir=/var --mandir=%{_mandir}  CC="gcc" AFLAGS="-g --noexecstack" LDFLAGS="-g -z noexecstack"
 	touch configure-stamp
 
 
