@@ -20,7 +20,7 @@ echo end prep
 #autoheader
 #autoconf
 HARDWARE=`uname -m`
-./configure --sbindir=/usr/sbin --sysconfdir=/etc --localstatedir=/var --mandir=%{_mandir}  CC="gcc" CFLAGS="$RPM_OPT_FLAGS" AFLAGS="--noexecstack" LDFLAGS="-z noexecstack"
+./configure --sbindir=/usr/sbin --sysconfdir=/etc --localstatedir=/var --mandir=%{_mandir}  CC="gcc" CFLAGS="-g $RPM_OPT_FLAGS" AFLAGS="-g --noexecstack" LDFLAGS="-g -z noexecstack"
 
 make
 
